Change mutable static final containers to unmodifiable