@@ -6,6 +6,7 @@ import arcbasis._cocos.*;
 import genericarc._cocos.TypeParamNameIsNoReservedKeyword;
 
 import java.util.Set;
+import java.util.Collections;
 
 public abstract class IdentifiersAreNoJavaKeywords {
 
@@ -15,7 +16,7 @@ public abstract class IdentifiersAreNoJavaKeywords {
    * Immutable collection of java 19 (update this set for newer java versions in accordance with the corresponding
    * <a href="https://docs.oracle.com/javase/specs/">java language specification</a>)
    */
-  static final Set<String> JAVA_KEYWORDS = Set.of(
+  static final Set<String> JAVA_KEYWORDS = Collections.unmodifiableSet(Set.of(
     "abstract",   "continue",   "for",          "new",         "switch",
     "assert",     "default",    "if",           "package",     "synchronized",
     "boolean",    "do",         "goto",         "private",     "this",
@@ -27,7 +28,7 @@ public abstract class IdentifiersAreNoJavaKeywords {
     "class",      "finally",    "long",         "strictfp",    "volatile",
     "const",      "float",      "native",       "super",       "while",
     "_"
-  );
+  ));
 
   public static class PortNamesAreNoJavaKeywords extends PortNameIsNoReservedKeyword {
     public PortNamesAreNoJavaKeywords() {
